--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </div>
                     <div class="hero-stats">
                         <div class="stat-item">
-                            <div class="stat-number">6+</div>
+                            <div class="stat-number">5+</div>
                             <div class="stat-label">Years Experience</div>
                         </div>
                         <div class="stat-item">
@@ -126,7 +126,7 @@
                         and a Master's degree in Management (2025) from Diponegoro University.
                     </p>
                     <p class="about-description">
-                        With over 6 years of experience spanning customer service, X-ray testing, administration, CRM, and 
+                        With over 5 years of experience spanning customer service, X-ray testing, administration, CRM, and 
                         purchasing support, I bring a unique blend of technical knowledge and business acumen to every project. 
                         My strong communication, negotiation, and data management skills are supported by comprehensive academic 
                         training in business and financial management.
@@ -272,7 +272,7 @@
                 <div class="section-label">Professional Journey</div>
                 <h2 class="section-title">Experience Highlights</h2>
                 <p class="section-description">
-                    Over 6 years of progressive experience across leading organizations
+                    Over 5 years of progressive experience across leading organizations
                 </p>
             </div>
             <div class="timeline">
@@ -315,7 +315,7 @@
                                     <h3 class="experience-title">Product Advisor</h3>
                                     <div class="experience-company">PT. Satya Abadi Visimed</div>
                                 </div>
-                                <div class="experience-period">2023 - 2024</div>
+                                <div class="experience-period">Dec 2023 - Apr 2024</div>
                             </div>
                             <ul class="experience-list">
                                 <li>Provided customized solutions aligned with customer needs and effectively communicated product features and benefits</li>
@@ -344,7 +344,7 @@
                                     <h3 class="experience-title">Operations & Administration Officer</h3>
                                     <div class="experience-company">PT. Global Medik Persada</div>
                                 </div>
-                                <div class="experience-period">2022 - 2023</div>
+                                <div class="experience-period">Dec 2022 - Aug 2023</div>
                             </div>
                             <ul class="experience-list">
                                 <li>Inspected, tested, and measured X-ray modalities (CT Scan and General X-ray), and prepared technical test reports with findings and recommendations</li>
@@ -372,7 +372,7 @@
                                     <h3 class="experience-title">Operations & Administration Officer</h3>
                                     <div class="experience-company">PT. Neutronika Global Utama</div>
                                 </div>
-                                <div class="experience-period">2019 - 2022</div>
+                                <div class="experience-period">June 2019 - Sept 2022</div>
                             </div>
                             <ul class="experience-list">
                                 <li>Inspected and tested X-ray equipment (CT Scan and General X-ray) while maintaining accurate technical records and reports</li>
@@ -744,7 +744,7 @@
                 <div class="footer-main">
                     <div class="footer-brand">
                         <div class="footer-logo">
-                            <span class="logo-text">Devi Artika Sari</span>
+                            <span class="logo-text" style="color:#ffffff">Devi Artika Sari</span>
                             <span class="logo-subtitle">S.Si., M.M</span>
                         </div>
                         <p class="footer-description">
